--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,6 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
         image: ahmadshafiq01/java-demo
-        registry: hub.docker.com/repository/docker/
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
